Update buttons style and fix background white space issue
I set the background image fo be fixed and at the center of
the page all the time.

--- a/style.css
+++ b/style.css
@@ -15,13 +15,9 @@ body {
     height: 100vh;
     padding: 0 10%;
     gap: 10%;
-    margin: 0;
-    background-image: url(images/dark-warrior.png);
+    background: url(images/dark-warrior.png) no-repeat center center fixed;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
     font-family: 'Eagle Lake', cursive, sans-serif, serif;
-    /* object-fit: contain; */
 }
 
 .opening {
@@ -46,19 +42,19 @@ button {
 }
 
 #scissors {
-    background-image: url(images/scissors\ -good.png);
+    background-image: url(images/scissors.png);
     background-position: center;
     background-size: cover;
 }
 
 #rock{
-    background-image: url(images/raise-hand\ \(1\).png);
+    background-image: url(images/rock.png);
     background-position: center;
     background-size: cover;
 }
 
 #paper {
-    background-image: url(images/paper-hand-smaller.png);
+    background-image: url(images/paper.png);
     background-position: center;
     background-size: cover;
 }
